--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-vue": "^9.29.1",
     "nuxt": "^3.13.2",
     "nuxt-easy-lightbox": "^1.0.2",
+    "nuxt-monaco-editor": "^1.3.1",
     "nuxt-toc": "^2.7.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
